Update 'c8cfnxmr9-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:3cb7546ccd6cbb90c21cf3c71ab730f97c56963d@sha256:d544a872744e42596fdbfd4d521b214d3060577c6e29b6bb320000308b201d48

--- a/components/c8cfnxmr9-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/c8cfnxmr9-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: c8cfnxmr9-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:3cb7546ccd6cbb90c21cf3c71ab730f97c56963d@sha256:d544a872744e42596fdbfd4d521b214d3060577c6e29b6bb320000308b201d48
+          name: container-image
